# fastapi-ex

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: ksqldb_exercise.py  main.py  models.py
src/routers/: foos.py  infrastructure.py  notes.py
