[tool.poetry]
name = "fastapi-ex"
version = "0.1.0"
description = ""
authors = ["David <davigetto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.78.0"}
SQLAlchemy = "^1.4.37"
databases = "^0.6.0"
aiosqlite = "^0.17.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.114.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
